--- a/css/style.css
+++ b/css/style.css
@@ -1,141 +1,119 @@
 /*====================================================== Home Page Styles =========================================================================================*/
 /*---- Header section styles ----------*/
 .header__wrapper {
-  min-height: 620px;
-  background-color: rgba(136, 186, 44, 0.36);
-  border: 1px solid rgba(112, 112, 112, 0.37);
+  background-color: rgba(0, 153, 219, 0.1);
+  margin-top: -5.562rem;
+}
+.header__wrapper .container__wraper {
+  margin-top: 5.562rem;
 }
 .header__wrapper .h1 {
   line-height: 1;
 }
-.header__wrapper .text__bold {
-  font-size: 4.25rem;
+.header__wrapper .hero {
+  opacity: 1;
+}
+.header__wrapper .rope__two {
+  left: -268px;
+  top: -13px;
+  opacity: 0.4;
+}
+.header__wrapper .rope {
+  right: 121px;
+  bottom: -8px;
+  opacity: 0.4;
 }
 
-@media (max-width: 1399px) {
-  .header__wrapper {
-    min-height: 550px;
+@media (max-width: 575px) {
+  .header__wrapper .display-4 {
+    font-size: 1.5rem;
+    line-height: 1.2;
   }
 }
 @media (max-width: 575px) {
-  .header__wrapper .h1 {
-    font-size: 2rem;
+  .fs-2, .fs-3 {
+    font-size: 1.25rem !important;
     line-height: 1.2;
   }
-  .header__wrapper .text__bold {
-    font-size: 3.25rem;
+  .lead {
+    font-size: 1rem !important;
+    line-height: 1.2;
+    margin-bottom: 0.5rem !important;
+  }
+}
+@media (max-width: 575px) {
+  .fs-1 {
+    font-size: 1.5rem !important;
   }
 }
 .service__card {
-  background-color: #F0F0F0;
-  transition: all 0.5s ease-in-out;
+  border: 1px solid rgba(112, 112, 112, 0.1);
+  box-shadow: 0px 6px 9px rgba(0, 0, 0, 0.1607843137);
+  border-radius: 25px;
+  margin-bottom: 0.75rem;
 }
 .service__card .title__box {
   min-height: 16.562rem;
 }
-.service__card .title {
-  color: var(--brand);
-}
-.service__card:hover {
-  background-color: var(--brand);
-}
-.service__card:hover .title {
-  color: var(--white);
-}
-.service__card:hover .desc {
-  color: var(--white);
-}
 
-.courseCarousel .owl-stage {
-  display: flex;
+.feather__caring .circle__1 {
+  width: 4.75rem;
+  height: 4.75rem;
+  border: 1px solid #707070;
+  background-color: #fff;
+  border-radius: 50%;
+  top: 1.5rem;
+  left: 0;
+  z-index: 0;
 }
-.courseCarousel .owl-stage .owl-item {
-  display: flex;
+.feather__caring .circle__2 {
+  width: 4.75rem;
+  height: 4.75rem;
+  border: 1px solid #707070;
+  background-color: #fff;
+  border-radius: 50%;
+  top: 1.5rem;
+  left: 58px;
+  z-index: 1;
 }
-
-.owl-dots {
-  text-align: center;
-  padding-top: 0.5rem;
+.feather__caring .circle__3 {
+  width: 4.75rem;
+  height: 4.75rem;
+  border: 1px solid #707070;
+  background-color: #fff;
+  border-radius: 50%;
+  top: 1.5rem;
+  left: 117px;
+  z-index: 2;
 }
-.owl-dots .owl-dot {
-  width: 13px;
-  height: 13px;
-  border: 1px solid var(--brand) !important;
-  border-radius: 50% !important;
-  margin: 4px;
-  background-color: var(--brand) !important;
-}
-.owl-dots .owl-dot.active {
-  width: 60px;
-  background-color: var(--secondary) !important;
-  border-color: var(--secondary) !important;
-  border-radius: 1rem !important;
-}
-
-.choose__care__wraper .choose__box {
-  width: 4.5rem;
+.feather__caring .border_right {
   height: 4.5rem;
-  background-color: var(--brand);
-  border-radius: 50%;
+  border: 1px solid #707070;
+  left: 13.6rem;
+  top: 1.62rem;
 }
-.choose__care__wraper .choose__content {
-  width: calc(100% - 4.5rem);
+.feather__caring .content__position {
+  left: 15.37rem;
+  top: 2.62rem;
 }
-
-.our__service {
-  background-color: rgba(81, 29, 99, 0.05);
-  border: 1px solid rgba(112, 112, 112, 0.05);
-}
-.our__service .service__caption {
-  padding: 1.375rem 2.375rem;
-  border-radius: 1.375rem;
-}
-.our__service .services__box {
-  width: 4.5rem;
-  height: 4.5rem;
-  border-radius: 50%;
-  background-color: #8835A5;
+.feather__caring .care__card {
+  border: 1px solid #707070;
+  border-radius: 38px;
+  overflow: hidden;
 }
 
-@media (max-width: 575px) {
-  .our__service .service__caption {
-    padding: 1.375rem 1.375rem;
-  }
-}
-.testimonialSlider .owl-nav {
-  position: absolute;
-  bottom: -3.25rem;
-  right: 2rem;
-}
-.testimonialSlider .owl-nav .owl-next, .testimonialSlider .owl-nav .owl-prev {
-  width: 2.5rem;
-  height: 2.5rem;
-  border: 0.5px solid #60B14E !important;
-  border-radius: 50%;
-  background-color: var(--brand) !important;
-  justify-content: center;
-  align-items: center;
-  margin: 0.2rem;
-  display: inline-flex;
-}
-.testimonialSlider .owl-nav .owl-next img, .testimonialSlider .owl-nav .owl-prev img {
-  height: 1.25rem;
-  width: auto;
-}
-.testimonialSlider .owl-nav .owl-next:hover, .testimonialSlider .owl-nav .owl-prev:hover {
-  background-color: #e9e9e9 !important;
-}
-
-@media (min-width: 992px) {
-  .testi__slider__box__right__aliged {
-    position: absolute;
-    top: 0;
-    left: 0%;
-    width: calc(72vw - 20px);
-  }
-}
-.blog__card {
+.blog__wraper .blog__card {
+  background-color: #fff;
   border: 1px solid #C4C4C4;
+}
+
+.plaholder__testi .position__img {
+  min-height: 40rem;
+  border-radius: 2.68rem;
+}
+.plaholder__testi .position__img .testi__box {
+  border-radius: 2.68rem;
+  padding: 37px 44px 48px 47px;
 }
 
 .page__header {
