--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -2,140 +2,182 @@
   
 /*---- Header section styles ----------*/
 .header__wrapper { 
-    min-height: 620px;
-    background-color: rgba(136, 186, 44, 0.36);
-    border: 1px solid rgba(112, 112, 112, 0.37);
+    // min-height:calc(100vh - 89px);
+    background-color: rgba(0, 153, 219, 0.1);
+    margin-top: -5.562rem;
+    
+    .container__wraper{
+        margin-top: 5.562rem;
+    }
+
 
     .h1 {
         line-height: 1;
     }
-    .text__bold{
-        font-size: 4.25rem;
-    }  
-}
 
-@media (max-width:1399px) {
-    .header__wrapper {
-        min-height: 550px;
+    .hero{
+       
+        opacity: 1;
+    }
+    .rope__two{
+        left: -268px;
+        top: -13px;
+        opacity: 0.4;
+    }
+    .rope{
+        right: 121px;
+        bottom: -8px;
+        opacity: 0.4;
     }
 }
+
+// @media (max-width:1399px) {
+//     .header__wrapper {
+//         min-height: 550px;
+//     }
+// }
 
 @media (max-width:575px) {
     .header__wrapper {
-        .h1 { font-size: 2rem;line-height: 1.2; }
-        .text__bold { font-size: 3.25rem; }
+        .display-4 { font-size: 1.5rem;line-height: 1.2; }
+        
     }
+}
+@media (max-width:575px) {
+   
+    .fs-2, .fs-3 { font-size: 1.25rem !important;line-height: 1.2; } 
+    .lead { font-size: 1rem !important;line-height: 1.2; 
+                margin-bottom: .5rem !important;
+    } 
+} 
+ 
+@media (max-width:575px) {
+    .fs-1{
+        font-size: 1.5rem !important;
+         
+    } 
+
 }
  
 
 .service__card{
-    
-    background-color: #F0F0F0;
-    transition: all 0.5s ease-in-out;
+    border: 1px solid rgba(112, 112, 112, 0.1);
+    box-shadow: 0px 6px 9px #00000029;
+    border-radius: 25px;
+    margin-bottom: .75rem;
     .title__box{
         min-height: 16.562rem;
-    }
-    .title{
-        color: var(--brand);
-    }
-    &:hover{
-        background-color: var(--brand);
-      
-        .title{
-            color: var(--white);
-        }
-        .desc{
-            color: var(--white);
-        }
-    }
-}
-.courseCarousel {
-    .owl-stage { 
-        display: flex;
-        .owl-item{
-            display: flex;
-        }
-    }
-}
- 
-.owl-dots {
-    text-align: center;padding-top: .5rem;
-    .owl-dot {
-        width: 13px;height: 13px;border: 1px solid var(--brand) !important;border-radius: 50% !important;
-        margin: 4px;background-color: var(--brand) !important;
-
-        &.active {
-            width: 60px;
-            background-color: var(--secondary) !important;border-color: var(--secondary) !important;
-            border-radius: 1rem !important;
-        }
-    }
-}
-
-.choose__care__wraper{
-    .choose__box{
-        width: 4.5rem;
-        height: 4.5rem; 
-        background-color: var(--brand);
-        border-radius: 50%;
-    }
-    .choose__content{
-        width: calc(100% -  4.5rem);
-    }
-}
-
-
-.our__service{
-    background-color: rgba(81, 29, 99, 0.05);
-    border: 1px solid rgba(112, 112, 112, 0.05);
-    .service__caption{
-        padding: 1.375rem 2.375rem;
-        border-radius: 1.375rem;
-    }
-    .services__box{
-        width: 4.5rem;
-        height: 4.5rem;
-        border-radius: 50%;
-        background-color: #8835A5;
-    }
-}
- 
-@media (max-width:575px) {
-    .our__service .service__caption {
-        padding: 1.375rem 1.375rem;
-    }
-}
-
- 
-.testimonialSlider{
-     
-    .owl-nav {
-        position: absolute;bottom: -3.25rem;right: 2rem; 
-      
-        .owl-next, .owl-prev { 
-            width: 2.5rem;height: 2.5rem;border: 0.5px solid #60B14E !important;border-radius: 50%;
-            background-color: var(--brand) !important;
-            justify-content: center;align-items: center;margin: .2rem;
-            display:inline-flex;
-
-            img {
-                height: 1.25rem;width: auto;  
-            }
-
-            &:hover {
-                background-color: #e9e9e9 !important;
-            }
-        } 
     } 
 }
 
-@media (min-width:992px) {
-    .testi__slider__box__right__aliged {
-        position: absolute;top: 0;left: 0%;
-        width: calc(72vw - 20px);
+.feather__caring{
+    .circle__1{
+        width: 4.75rem;
+        height: 4.75rem;
+        border: 1px solid #707070;
+        background-color: #fff;
+        border-radius: 50%;
+        top: 1.5rem; 
+        left: 0;
+        z-index: 0;
+    }
+    .circle__2{
+        width: 4.75rem;
+        height: 4.75rem;
+        border: 1px solid #707070;
+        background-color: #fff;
+        border-radius: 50%;
+        top: 1.5rem;
+        left: 58px;
+        z-index: 1;
+        
+    }
+    .circle__3{
+        width: 4.75rem;
+        height: 4.75rem;
+        border: 1px solid #707070;
+        background-color: #fff;
+        border-radius: 50%;
+        top: 1.5rem;
+        left: 117px;
+        z-index: 2;
+        
+    }
+    .border_right{
+        height: 4.5rem;
+        border: 1px solid #707070; 
+        left: 13.6rem;
+        top: 1.62rem;
+    }
+    .content__position{
+        left: 15.37rem;
+        top: 2.62rem;
+    }
+    .care__card{
+        border: 1px solid #707070;
+        border-radius: 38px;
+        overflow: hidden;
     }
 }
 
-.blog__card{
-    border: 1px solid #C4C4C4;
+.blog__wraper{
+    .blog__card{
+        background-color: #fff;
+        border: 1px solid #C4C4C4;
+    }
 }
+
+
+.plaholder__testi{
+
+    .position__img{
+        min-height: 40rem;
+       
+        border-radius: 2.68rem;
+        .testi__box{
+            border-radius: 2.68rem;
+            padding: 37px 44px 48px 47px;
+        } 
+    }
+}
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// .courseCarousel {
+//     .owl-stage { 
+//         display: flex;
+//         .owl-item{
+//             display: flex;
+//         }
+//     }
+// }
+ 
+// .owl-dots {
+//     text-align: center;padding-top: .5rem;
+//     .owl-dot {
+//         width: 13px;height: 13px;border: 1px solid var(--brand) !important;border-radius: 50% !important;
+//         margin: 4px;background-color: var(--brand) !important;
+
+//         &.active {
+//             width: 60px;
+//             background-color: var(--secondary) !important;border-color: var(--secondary) !important;
+//             border-radius: 1rem !important;
+//         }
+//     }
+// }
+ 
