--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -8,7 +8,7 @@
 }
 
 .scrolled-up {
-    transform: translateY(0);background-color: rgb(255, 244, 235) !important;
+    transform: translateY(0);background-color: white;
     transition: all 0.3s ease-in-out; position: fixed;
     top: 0;
     right: 0;
