--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,30 @@
   left: -268px;
   top: -13px;
   opacity: 0.4;
+  mix-blend-mode: luminosity;
+  pointer-events: none;
 }
 .header__wrapper .rope {
-  right: 121px;
+  right: 0;
   bottom: -8px;
   opacity: 0.4;
+  pointer-events: none;
+  mix-blend-mode: luminosity;
 }
 
+@media (min-width: 992px) {
+  .header__wrapper .title {
+    width: calc(100% + 5rem);
+  }
+}
+@media (max-width: 991px) {
+  .header__wrapper {
+    margin-top: -6rem;
+  }
+  .header__wrapper .container__wraper {
+    padding-top: 5rem;
+  }
+}
 @media (max-width: 575px) {
   .header__wrapper .display-4 {
     font-size: 1.5rem;
@@ -46,9 +63,16 @@
     font-size: 1.5rem !important;
   }
 }
+.servicesCarousel .owl-stage-outer {
+  height: calc(100% + 20px);
+  margin: -7px;
+  padding: 7px;
+  width: calc(100% + 20px);
+}
+
 .service__card {
   border: 1px solid rgba(112, 112, 112, 0.1);
-  box-shadow: 0px 6px 9px rgba(0, 0, 0, 0.1607843137);
+  box-shadow: 0px 6px 9px rgba(0, 0, 0, 0.0980392157);
   border-radius: 25px;
   margin-bottom: 0.75rem;
 }
@@ -106,6 +130,13 @@
   background-color: #fff;
   border: 1px solid #C4C4C4;
 }
+.blog__wraper .blog__card .title a {
+  color: var(--primary);
+}
+.blog__wraper .blog__card .title a:hover {
+  text-decoration: underline;
+  color: var(--dark);
+}
 
 .plaholder__testi .position__img {
   min-height: 40rem;
@@ -114,6 +145,53 @@
 .plaholder__testi .position__img .testi__box {
   border-radius: 2.68rem;
   padding: 37px 44px 48px 47px;
+}
+.plaholder__testi .position__img .testi__box .author__box img {
+  width: 6rem;
+  height: 6rem;
+}
+
+@media (max-width: 575px) {
+  .plaholder__testi .position__img .testi__box {
+    border-radius: 2.68rem;
+    padding: 20px 15px 28px 15px;
+  }
+  .plaholder__testi .position__img .testi__box .author__box img {
+    width: 5rem;
+    height: 5rem;
+  }
+}
+.testimonialSlider .owl-dots {
+  text-align: left;
+}
+.testimonialSlider .owl-dots .owl-dot {
+  border: 1px solid var(--white) !important;
+  background-color: var(--white) !important;
+}
+.testimonialSlider .owl-dots .owl-dot.active {
+  width: 60px;
+  background-color: var(--white) !important;
+  border-color: var(--white) !important;
+  border-radius: 1rem !important;
+}
+
+.owl-dots {
+  text-align: center;
+  padding-top: 0.5rem;
+}
+.owl-dots .owl-dot {
+  width: 13px;
+  height: 13px;
+  border: 1px solid var(--brand) !important;
+  border-radius: 50% !important;
+  margin: 4px;
+  background-color: var(--brand) !important;
+}
+.owl-dots .owl-dot.active {
+  width: 60px;
+  background-color: var(--secondary) !important;
+  border-color: var(--secondary) !important;
+  border-radius: 1rem !important;
 }
 
 .page__header {
