--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -9,8 +9,7 @@
     .container__wraper{
         margin-top: 5.562rem;
     }
-
-
+  
     .h1 {
         line-height: 1;
     }
@@ -22,20 +21,32 @@
     .rope__two{
         left: -268px;
         top: -13px;
-        opacity: 0.4;
+        opacity: 0.4;mix-blend-mode: luminosity;pointer-events: none;
     }
     .rope{
-        right: 121px;
+        right: 0;
         bottom: -8px;
-        opacity: 0.4;
+        opacity: 0.4;pointer-events: none;mix-blend-mode: luminosity;
     }
 }
 
-// @media (max-width:1399px) {
-//     .header__wrapper {
-//         min-height: 550px;
-//     }
-// }
+@media (min-width:992px) {
+    .header__wrapper {
+        
+        .title {
+            width: calc(100% + 5rem);
+        }
+    }
+}
+
+@media (max-width:991px) {
+    .header__wrapper {
+        margin-top: -6rem;
+        .container__wraper {
+            padding-top: 5rem;
+        }
+    }
+}
 
 @media (max-width:575px) {
     .header__wrapper {
@@ -59,10 +70,16 @@
 
 }
  
+.servicesCarousel .owl-stage-outer {
+    height: calc(100% + 20px);
+    margin: -7px;
+    padding: 7px;
+    width: calc(100% + 20px);
+}
 
 .service__card{
     border: 1px solid rgba(112, 112, 112, 0.1);
-    box-shadow: 0px 6px 9px #00000029;
+    box-shadow: 0px 6px 9px #00000019;
     border-radius: 25px;
     margin-bottom: .75rem;
     .title__box{
@@ -124,6 +141,16 @@
     .blog__card{
         background-color: #fff;
         border: 1px solid #C4C4C4;
+
+        .title {
+            a {
+                color: var(--primary);
+
+                &:hover {
+                    text-decoration: underline;color: var(--dark);
+                }
+            }
+        }
     }
 }
 
@@ -137,14 +164,43 @@
         .testi__box{
             border-radius: 2.68rem;
             padding: 37px 44px 48px 47px;
+
+            .author__box img {
+                width: 6rem;height: 6rem;
+            }
         } 
     }
 }
  
 
+@media (max-width: 575px) {
+    .plaholder__testi .position__img .testi__box {
+        border-radius: 2.68rem;
+        padding: 20px 15px 28px 15px;
+
+        .author__box img {
+            width: 5rem;height: 5rem;
+        }
+    }
+}
 
 
-
+.testimonialSlider {
+    .owl-dots {
+        text-align: left;
+        .owl-dot {
+           border: 1px solid var(--white) !important; 
+            background-color: var(--white) !important;
+    
+            &.active {
+                width: 60px;
+                background-color: var(--white) !important;border-color: var(--white) !important;
+                border-radius: 1rem !important;
+            }
+        }
+    }
+     
+}
 
 
 
@@ -167,17 +223,17 @@
 //     }
 // }
  
-// .owl-dots {
-//     text-align: center;padding-top: .5rem;
-//     .owl-dot {
-//         width: 13px;height: 13px;border: 1px solid var(--brand) !important;border-radius: 50% !important;
-//         margin: 4px;background-color: var(--brand) !important;
+.owl-dots {
+    text-align: center;padding-top: .5rem;
+    .owl-dot {
+        width: 13px;height: 13px;border: 1px solid var(--brand) !important;border-radius: 50% !important;
+        margin: 4px;background-color: var(--brand) !important;
 
-//         &.active {
-//             width: 60px;
-//             background-color: var(--secondary) !important;border-color: var(--secondary) !important;
-//             border-radius: 1rem !important;
-//         }
-//     }
-// }
+        &.active {
+            width: 60px;
+            background-color: var(--secondary) !important;border-color: var(--secondary) !important;
+            border-radius: 1rem !important;
+        }
+    }
+}
  
