--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -60,7 +60,7 @@
             
             
             .dropdown-item { 
-                color: var(--link-color); 
+                color: #707070;
                 font-size: .937rem;  
                 display: block;
                 padding: .5rem 1rem;
@@ -93,9 +93,7 @@
   
 
     .navbar-toggler {
-        border: 1px solid transparent;
-        width: 2.875rem;height: 2.875rem; 
-        
+        border: 1px solid transparent;  
          
         &:focus {
             box-shadow: none;
