--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
 /*---- Header section styles ----------*/
 .header__wrapper {
   background-color: rgba(0, 153, 219, 0.1);
-  margin-top: -5.562rem;
 }
 .header__wrapper .container__wraper {
   margin-top: 5.562rem;
@@ -34,9 +33,6 @@
   }
 }
 @media (max-width: 991px) {
-  .header__wrapper {
-    margin-top: -6rem;
-  }
   .header__wrapper .container__wraper {
     padding-top: 5rem;
   }
@@ -80,32 +76,28 @@
   min-height: 16.562rem;
 }
 
-.feather__caring .circle__1 {
+.feather__caring .patient__thumb {
+  width: 4.75rem;
+  height: 4.75rem;
+}
+.feather__caring .circle {
   width: 4.75rem;
   height: 4.75rem;
   border: 1px solid #707070;
   background-color: #fff;
   border-radius: 50%;
+}
+.feather__caring .circle__1 {
   top: 1.5rem;
   left: 0;
   z-index: 0;
 }
 .feather__caring .circle__2 {
-  width: 4.75rem;
-  height: 4.75rem;
-  border: 1px solid #707070;
-  background-color: #fff;
-  border-radius: 50%;
   top: 1.5rem;
   left: 58px;
   z-index: 1;
 }
 .feather__caring .circle__3 {
-  width: 4.75rem;
-  height: 4.75rem;
-  border: 1px solid #707070;
-  background-color: #fff;
-  border-radius: 50%;
   top: 1.5rem;
   left: 117px;
   z-index: 2;
