--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   background-color: rgba(0, 153, 219, 0.1);
 }
 .header__wrapper .container__wraper {
-  margin-top: 5.562rem;
+  margin-top: 7.562rem;
 }
 .header__wrapper .h1 {
   line-height: 1;
@@ -34,13 +34,16 @@
 }
 @media (max-width: 991px) {
   .header__wrapper .container__wraper {
-    padding-top: 5rem;
+    padding: 5rem 0rem;
   }
 }
 @media (max-width: 575px) {
   .header__wrapper .display-4 {
     font-size: 1.5rem;
     line-height: 1.2;
+  }
+  .header__wrapper .container__wraper {
+    margin-top: 4.9rem;
   }
 }
 @media (max-width: 575px) {
@@ -165,6 +168,54 @@
   background-color: var(--white) !important;
   border-color: var(--white) !important;
   border-radius: 1rem !important;
+}
+
+.accordion .accordion-item {
+  background-color: rgba(13, 103, 153, 0.0901960784);
+  border-radius: 43px !important;
+}
+.accordion .accordion-item:not(:last-child) {
+  margin-bottom: 1.45rem;
+}
+.accordion .accordion-item .accordion-header {
+  background-color: none !important;
+}
+.accordion .accordion-item .accordion-button {
+  border: 0;
+  box-shadow: none !important;
+  min-height: 5rem;
+  border-radius: 43px !important;
+  background-color: rgba(59, 170, 226, 0.1);
+  font-size: 1.15rem;
+  padding: 0rem 2rem;
+}
+.accordion .accordion-item .accordion-button:not(.collapsed) {
+  color: var(--dark);
+  box-shadow: none !important;
+  background-color: transparent;
+}
+.accordion .accordion-item .accordion-button:not(.collapsed)::after {
+  background-image: none;
+}
+.accordion .accordion-item .accordion-button::after {
+  background-image: none;
+}
+.accordion .accordion-item .accordion-body {
+  padding-top: 0;
+  font-size: 0.937rem;
+}
+.accordion .accordion-item .accordion-body p:last-child {
+  margin-bottom: 0;
+}
+
+.feather__card {
+  padding: 2.35rem 1.75rem;
+  border: 1px solid #707070;
+  border-radius: 1.5rem;
+  transition: all 0.5s ease-in-out;
+}
+.feather__card:hover {
+  background-color: rgba(13, 103, 153, 0.0901960784);
 }
 
 .owl-dots {
