--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -9,16 +9,14 @@
 
 .scrolled-up {
     transform: translateY(0);background-color: white;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;position: fixed;
     box-shadow: 0 4px 16px rgba($color: #000000, $alpha: 0.12);
     
     
     .navbar-brand img { max-height: 5rem;width: auto; }
 }
-.navbar {     
-    z-index: 999;
-    padding: 0%;
-    position: fixed;
+.navbar {      
+    padding: 0%; 
     top: 0;
     right: 0;
     left: 0;
