--- a/css/variables.css
+++ b/css/variables.css
@@ -96,6 +96,10 @@ body {
   background-color: rgba(215, 233, 243, 0.24) !important;
 }
 
+.bg-primary-light {
+  background-color: rgba(0, 153, 219, 0.1);
+}
+
 .z-index {
   z-index: 99;
   position: relative;
