--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -4,6 +4,8 @@
 .header__wrapper { 
     // min-height:calc(100vh - 89px);
     background-color: rgba(0, 153, 219, 0.1);
+
+    .container__wraper { padding-top: 7rem; }
   
     .h1 {
         line-height: 1;
@@ -54,19 +56,19 @@
 }
 @media (max-width:575px) {
    
-    .fs-2, .fs-3 { font-size: 1.25rem !important;line-height: 1.2; } 
+    // .fs-2, .fs-3 { font-size: 1.25rem !important;line-height: 1.2; } 
     .lead { font-size: 1rem !important;line-height: 1.2; 
                 margin-bottom: .5rem !important;
     } 
 } 
  
-@media (max-width:575px) {
-    .fs-1{
-        font-size: 1.5rem !important;
+// @media (max-width:575px) {
+//     .fs-1{
+//         font-size: 1.5rem !important;
          
-    } 
+//     } 
 
-}
+// }
  
 .servicesCarousel .owl-stage-outer {
     height: calc(100% + 20px);
